# QQ-group-bot-with-Generic-Agent

./: .env.example  .gitattributes  .gitignore  README.en.md  README.md  README.zh-CN.md  pyproject.toml
docs/: architecture.md  memory-design.md  operations.md  privacy.md  qce-wsl-genericagent.md  trigger-policy.md
examples/: config.example.toml  fake_messages.jsonl
scripts/: run_onebot_gateway.py
scripts/windows/: start-gateway-wsl.example.bat  start-qce.example.bat
src/group_memory_agent/: __init__.py  config.py  image_cache.py  live_memory.py  models.py  onebot_gateway.py  prompts.py  runner.py  self_improvement.py  trigger_policy.py  vision.py
