[project]
name = "group-memory-agent"
version = "0.1.0"
description = "A clean OneBot group-memory gateway for a persistent chat persona agent."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "requests>=2.31.0",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

